# data-ingestion-trips-taken

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
infra/local/dev/: deploy_services.sh  env
notebooks/: exploratory_data_analysis.ipynb
resources/ddl/: create_table_similar_trips.sql  create_table_trips.sql
resources/sql/: latest_datasource_commonly_region.sql  number_of_appearances.sql  weekly_average_trips.sql
src/: trip.py
src/pipelines/: __init__.py  similar_trip.py  trip.py
src/utils/: db_connect.py  redis_connect.py
tests/: test_data_ingestion_trips_taken.py
